--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.5</version>
+        </dependency>
     </dependencies>
 
     <build>
